第二次提交
JVM 内存模型 对象分配策略 GC策略 GC算法 GC器种类

JVM调优